# testing

Race/: CMakeLists.txt
Race/inc/: car.h
Race/mocks/: mock_car.cpp
Race/tests/: test_driver.cpp
gmock/Race/: CMakeLists.txt  car.cpp  driver.cpp  race.cpp
gmock/Race/inc/: car.h  driver.h
gmock/Race/mocks/: mock_driver.cpp
gmock/Race/tests/: CMakeLists.txt
inheritance/: CMakeLists.txt  car.cpp  mazda.cpp  race.cpp
inheritance/inc/: car.h  mazda.h  vehicle.h
inheritance/tests/: test_driver.cpp
